unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/CMPL123__CMPL_App_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Application level config parameters</description>
    <label>App Config</label>
</CustomObject>