unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__ACS_URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ACS_URL__c</fullName>
        <description>Assertion Consumer Service (ACS) URL</description>
        <inlineHelpText>Assertion Consumer Service (ACS) URL. A public site or a URL where SAML IDP can post the response.</inlineHelpText>
        <label>ACS URL</label>
        <type>Url</type>
    </CustomField>