unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Allow_Task_Auto_Promotion_Update__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Allow_Task_Auto_Promotion_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Task Auto Promotion Update</description>
        <inlineHelpText>Allow Task Auto Promotion Update</inlineHelpText>
        <label>Allow Task Auto Promotion Update</label>
        <type>Checkbox</type>
    </CustomField>