unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Client_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Client_Id__c</fullName>
        <description>Salesforce Remote App Client Id</description>
        <inlineHelpText>Salesforce Remote App Client Id</inlineHelpText>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>