unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Client_Secret__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Client_Secret__c</fullName>
        <description>Salesforce Remote App Client Secret</description>
        <inlineHelpText>Salesforce Remote App Client Secret</inlineHelpText>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>