unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__E_sign_password_expire_in_days__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__E_sign_password_expire_in_days__c</fullName>
        <defaultValue>90</defaultValue>
        <description>E-sign password expire in days</description>
        <inlineHelpText>E-sign password expire in days</inlineHelpText>
        <label>E-Sign password expire in days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>