unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Enable_AuditTrail_Translation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Enable_AuditTrail_Translation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable AuditTrail Translation</label>
        <type>Checkbox</type>
    </CustomField>