unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Entity_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Entity_Id__c</fullName>
        <description>Identity Provider (IDP) unique URL where SAML request can be validated.</description>
        <inlineHelpText>Identity Provider (IDP) unique URL where SAML request can be validated.</inlineHelpText>
        <label>Entity Id</label>
        <type>Url</type>
    </CustomField>