unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Force_Authentication_Required__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Force_Authentication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force Authentication Required?</description>
        <inlineHelpText>Force Authentication Required?</inlineHelpText>
        <label>Force Authentication Required?</label>
        <type>Checkbox</type>
    </CustomField>