unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Identity_Provider_Login_URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Identity_Provider_Login_URL__c</fullName>
        <description>Identity Provider Login URL :  where generated SAML Request XML can be post.</description>
        <inlineHelpText>Identity Provider Login URL:  where generated SAML Request XML can be post.</inlineHelpText>
        <label>IDP Login URL</label>
        <type>Url</type>
    </CustomField>