unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Identity_Provider_Logout_URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Identity_Provider_Logout_URL__c</fullName>
        <description>Used to invalidate existing SAML session</description>
        <inlineHelpText>Used to invalidate existing SAML session</inlineHelpText>
        <label>IDP Logout URL</label>
        <type>Url</type>
    </CustomField>