unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Is_E_Sign_Password__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_E_Sign_Password__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck, if you do not want to use salesforce password in e-signature.</inlineHelpText>
        <label>Is Salesforce E-Sign Password?</label>
        <type>Checkbox</type>
    </CustomField>