unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Is_SAML_Auth__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_SAML_Auth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate/Deactivate the Federated SSO Process. Default is not checked (deactivate)</description>
        <inlineHelpText>Activate/Deactivate the Federated SSO Process. Default is not checked (deactivate)</inlineHelpText>
        <label>Use Federated SSO</label>
        <type>Checkbox</type>
    </CustomField>