unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Portal_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Portal_Id__c</fullName>
        <description>If logged in as a portal user mention the portal Id.</description>
        <inlineHelpText>If logged in as a portal user mention the portal Id.</inlineHelpText>
        <label>Portal Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>