unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Report_Template_Logo_Document_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Report_Template_Logo_Document_Name__c</fullName>
        <defaultValue>"123 Report Template Logo"</defaultValue>
        <label>Report Template Logo Document Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>