unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SAML_Request_Certificate_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_Request_Certificate_Name__c</fullName>
        <description>SSO Certificate Name used to sign the SAML Request</description>
        <inlineHelpText>SSO Certificate Name used to sign the SAML Request</inlineHelpText>
        <label>SSO Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>