unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SAML_Response_Provider__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_Response_Provider__c</fullName>
        <description>SAML Response Provider URL: Used to validate the SAML response from un-authorized provider.</description>
        <inlineHelpText>SAML Response Provider URL: Used to validate the SAML response from un-authorized provider.</inlineHelpText>
        <label>SAML Response Provider URL</label>
        <type>Url</type>
    </CustomField>