unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SAML_SSO_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_SSO_Name__c</fullName>
        <description>SAML SSO API Name</description>
        <inlineHelpText>SAML SSO API Name</inlineHelpText>
        <label>SAML SSO Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>