unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SF_Base_Url__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SF_Base_Url__c</fullName>
        <description>Salesforce Base Url</description>
        <inlineHelpText>Salesforce Base Url</inlineHelpText>
        <label>Salesforce Base Url</label>
        <type>Url</type>
    </CustomField>