unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SF_Login_URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SF_Login_URL__c</fullName>
        <defaultValue>"https://login.salesforce.com"</defaultValue>
        <inlineHelpText>For Ex: 
Prod/Dev: https://login.salesforce.com
Sandbox: https://test.salesforce.com
Custom Login: https://&lt;mydomain&gt;.salesforce.com</inlineHelpText>
        <label>Salesforce Login URL</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>