unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__SSO_Session_Timeout_Limit__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SSO_Session_Timeout_Limit__c</fullName>
        <defaultValue>60</defaultValue>
        <description>SSO Session Timeout Limit (in secs): Default to 60 seconds.</description>
        <inlineHelpText>SSO Session Time Limit: Default to 60 seconds.</inlineHelpText>
        <label>SSO Session Timeout Limit (in secs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>