unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Suppress_Insert_Audit_Records__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Suppress_Insert_Audit_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suppress Insert Audit Records</description>
        <inlineHelpText>Suppress Insert Audit Records</inlineHelpText>
        <label>Suppress Insert Audit Records</label>
        <type>Checkbox</type>
    </CustomField>