unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Target_Consumer_Secret__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Target_Consumer_Secret__c</fullName>
        <description>Target Consumer Secret</description>
        <label>Target Consumer Secret</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>