unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123__Use_Remote_App_Auth__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Use_Remote_App_Auth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if remote app authentication is needed. By default it will authenticate using SOAP API.</description>
        <inlineHelpText>Check if remote app authentication is needed. By default it will authenticate using SOAP API.</inlineHelpText>
        <label>Use Remote App Auth</label>
        <type>Checkbox</type>
    </CustomField>