unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__Enable_EMDR_Required_Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Enable_EMDR_Required_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EMDR Required Fields?</description>
        <inlineHelpText>Enable EMDR Required Fields?</inlineHelpText>
        <label>Enable EMDR Required Fields?</label>
        <type>Checkbox</type>
    </CustomField>