unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__MEDDEV_Rev7__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MEDDEV_Rev7__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEDDEV Rev7</label>
        <type>Checkbox</type>
    </CustomField>