unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__MEDDEV_XML_Email_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MEDDEV_XML_Email_Id__c</fullName>
        <description>Split with Comma</description>
        <inlineHelpText>Enter email Id's separated by comma(,). Use $USER if email should go to the current Salesforce user.</inlineHelpText>
        <label>MEDDEV-XML Recipient Email Id(s)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>