unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__Read_Only_Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Read_Only_Fields__c</fullName>
        <description>EMDR Read Only Fields</description>
        <inlineHelpText>Provide field API names with comma separated.</inlineHelpText>
        <label>EMDR Read Only Fields</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>