unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__Show_Add_Investigation_Button__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Show_Add_Investigation_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show/Hide Add Investigation Button</description>
        <inlineHelpText>Uncheck to Hide Add Investigation Button</inlineHelpText>
        <label>Show Add Investigation Button</label>
        <type>Checkbox</type>
    </CustomField>