unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123CME__Show_Add_Question_Button__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Show_Add_Question_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show/Hide Add Question Button</description>
        <inlineHelpText>Uncheck to Hide Add Question Button</inlineHelpText>
        <label>Show Add Question Button</label>
        <type>Checkbox</type>
    </CustomField>