unpackaged/main/default/objects/CMPL123__CMPL_App_Config__c/fields/CMPL123TMS__UserSupport__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__UserSupport__c</fullName>
        <description>Email Address for user support</description>
        <inlineHelpText>Email Address for user support</inlineHelpText>
        <label>TMS User Support</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>